update config_knative with new async repo (#2396)
* update config knative with new async repo

* results of update codegen

* typo fix

* update build and integration tests value

* generate configs

--- a/config/prod/prow/testgrid/testgrid.yaml
+++ b/config/prod/prow/testgrid/testgrid.yaml
@@ -508,6 +508,28 @@ test_groups:
 - name: ci-knative-sandbox-net-kourier-test-coverage
   gcs_prefix: knative-prow/logs/ci-knative-sandbox-net-kourier-go-coverage
   short_text_metric: "coverage"
+- name: ci-knative-sandbox-async-component-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-async-component-continuous
+  alert_stale_results_hours: 3
+- name: ci-knative-sandbox-async-component-nightly-release
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-async-component-nightly-release
+  alert_options:
+    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+  num_failures_to_alert: 1
+- name: ci-knative-sandbox-async-component-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-async-component-dot-release
+  alert_options:
+    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
+- name: ci-knative-sandbox-async-component-auto-release
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-async-component-auto-release
+  alert_options:
+    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+  num_failures_to_alert: 1
+- name: ci-knative-sandbox-async-component-test-coverage
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-async-component-go-coverage
+  short_text_metric: "coverage"
 - name: ci-knative-sandbox-discovery-continuous
   gcs_prefix: knative-prow/logs/ci-knative-sandbox-discovery-continuous
   alert_stale_results_hours: 3
@@ -781,6 +803,11 @@ test_groups:
   gcs_prefix: knative-prow/logs/ci-knative-operator-0.17-continuous-beta-prow-tests
 - name: ci-knative-operator-go-coverage-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-operator-go-coverage-beta-prow-tests
+  short_text_metric: "coverage"
+- name: ci-knative-sandbox-async-component-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-async-component-continuous-beta-prow-tests
+- name: ci-knative-sandbox-async-component-go-coverage-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-async-component-go-coverage-beta-prow-tests
   short_text_metric: "coverage"
 - name: ci-knative-sandbox-discovery-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-sandbox-discovery-continuous-beta-prow-tests
@@ -1225,6 +1252,35 @@ dashboards:
     num_failures_to_alert: 1
   - name: coverage
     test_group_name: ci-knative-sandbox-net-kourier-test-coverage
+    base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
+- name: async-component
+  dashboard_tab:
+  - name: continuous
+    test_group_name: ci-knative-sandbox-async-component-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: nightly
+    test_group_name: ci-knative-sandbox-async-component-nightly-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 1
+  - name: dot-release
+    test_group_name: ci-knative-sandbox-async-component-dot-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 1
+  - name: auto-release
+    test_group_name: ci-knative-sandbox-async-component-auto-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 1
+  - name: coverage
+    test_group_name: ci-knative-sandbox-async-component-test-coverage
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
 - name: discovery
   dashboard_tab:
@@ -1809,6 +1865,12 @@ dashboards:
   - name: ci-knative-operator-go-coverage
     test_group_name: ci-knative-operator-go-coverage-beta-prow-tests
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
+  - name: ci-knative-sandbox-async-component-continuous
+    test_group_name: ci-knative-sandbox-async-component-continuous-beta-prow-tests
+    base_options: "sort-by-failures="
+  - name: ci-knative-sandbox-async-component-go-coverage
+    test_group_name: ci-knative-sandbox-async-component-go-coverage-beta-prow-tests
+    base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
   - name: ci-knative-sandbox-discovery-continuous
     test_group_name: ci-knative-sandbox-discovery-continuous-beta-prow-tests
     base_options: "sort-by-failures="
@@ -1884,6 +1946,7 @@ dashboard_groups:
   - "net-http01"
   - "net-istio"
   - "net-kourier"
+  - "async-component"
   - "discovery"
   - "eventing-kafka"
   - "eventing-kafka-broker"
