--- a/config/prod/prow/config_knative.yaml
+++ b/config/prod/prow/config_knative.yaml
@@ -343,6 +343,11 @@ presubmits:
     args:
     - --run-test
     - ./test/e2e-upgrade-tests.sh
+  knative-sandbox/async-component:
+  - build-tests: true
+  - unit-tests: true
+  - integration-tests: true
+  - go-coverage: true
   knative-sandbox/discovery:
   - build-tests: true
   - unit-tests: true
@@ -834,6 +839,11 @@ periodics:
         memory: 12Gi
       limits:
         memory: 16Gi
+  - nightly: true
+  - dot-release: true
+  - auto-release: true
+  knative-sandbox/async-component:
+  - continuous: true
   - nightly: true
   - dot-release: true
   - auto-release: true
