--- a/images/tool/Dockerfile
+++ b/images/tool/Dockerfile
@@ -31,7 +31,9 @@ RUN cp "$(which ${TOOL_NAME})" /
 RUN if [ "${TOOL_NAME}" = flaky-test-reporter ]; then mkdir -p /config && cp /go/src/knative.dev/test-infra/tools/flaky-test-reporter/config/config.yaml /config/config.yaml; fi
 
 RUN GO111MODULE=on go get -u sigs.k8s.io/kubetest2
-
+RUN GO111MODULE=on go get -u sigs.k8s.io/kubetest2/kubetest2-gke
+RUN GO111MODULE=on go get -u sigs.k8s.io/kubetest2/kubetest2-kind
+RUN GO111MODULE=on go get -u sigs.k8s.io/kubetest2/kubetest2-tester-exec
 # Remove test-infra from the container
 RUN rm -fr /go/src/knative.dev/test-infra
 
