--- a/config/prod/prow/config_knative.yaml
+++ b/config/prod/prow/config_knative.yaml
@@ -676,6 +676,10 @@ periodics:
         memory: 12Gi
       limits:
         memory: 16Gi
+  knative-sandbox/eventing-awssqs:
+  - continuous: true
+  - nightly: true
+  - auto-release: true
   knative-sandbox/eventing-couchdb:
   - continuous: true
   - nightly: true
