--- a/config/prod/prow/testgrid/testgrid.yaml
+++ b/config/prod/prow/testgrid/testgrid.yaml
@@ -395,6 +395,19 @@ test_groups:
   alert_options:
     alert_mail_to_addresses: "serverless-engprod-sea@google.com"
   num_failures_to_alert: 3
+- name: ci-knative-sandbox-eventing-awssqs-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-awssqs-continuous
+  alert_stale_results_hours: 3
+- name: ci-knative-sandbox-eventing-awssqs-nightly-release
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-awssqs-nightly-release
+  alert_options:
+    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+  num_failures_to_alert: 1
+- name: ci-knative-sandbox-eventing-awssqs-auto-release
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-awssqs-auto-release
+  alert_options:
+    alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+  num_failures_to_alert: 1
 - name: ci-knative-sandbox-eventing-couchdb-continuous
   gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-couchdb-continuous
   alert_stale_results_hours: 3
@@ -807,6 +820,8 @@ test_groups:
 - name: ci-knative-eventing-contrib-go-coverage-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-go-coverage-beta-prow-tests
   short_text_metric: "coverage"
+- name: ci-knative-sandbox-eventing-awssqs-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-awssqs-continuous-beta-prow-tests
 - name: ci-knative-sandbox-eventing-couchdb-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-couchdb-continuous-beta-prow-tests
 - name: ci-knative-sandbox-eventing-github-continuous-beta-prow-tests
@@ -1172,6 +1187,26 @@ dashboards:
   - name: coverage
     test_group_name: ci-knative-operator-test-coverage
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
+- name: eventing-awssqs
+  dashboard_tab:
+  - name: continuous
+    test_group_name: ci-knative-sandbox-eventing-awssqs-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: nightly
+    test_group_name: ci-knative-sandbox-eventing-awssqs-nightly-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 1
+  - name: auto-release
+    test_group_name: ci-knative-sandbox-eventing-awssqs-auto-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "serverless-engprod-sea@google.com"
+    num_failures_to_alert: 1
 - name: eventing-couchdb
   dashboard_tab:
   - name: continuous
@@ -1955,6 +1990,9 @@ dashboards:
   - name: ci-knative-eventing-contrib-go-coverage
     test_group_name: ci-knative-eventing-contrib-go-coverage-beta-prow-tests
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
+  - name: ci-knative-sandbox-eventing-awssqs-continuous
+    test_group_name: ci-knative-sandbox-eventing-awssqs-continuous-beta-prow-tests
+    base_options: "sort-by-failures="
   - name: ci-knative-sandbox-eventing-couchdb-continuous
     test_group_name: ci-knative-sandbox-eventing-couchdb-continuous-beta-prow-tests
     base_options: "sort-by-failures="
@@ -2125,6 +2163,7 @@ dashboard_groups:
   - "operator"
 - name: knative-sandbox
   dashboard_names:
+  - "eventing-awssqs"
   - "eventing-couchdb"
   - "eventing-github"
   - "eventing-gitlab"
