enable prow to send slack messages for nightly discovery failures

--- a/config/prod/prow/config_knative.yaml
+++ b/config/prod/prow/config_knative.yaml
@@ -886,6 +886,12 @@ periodics:
   knative-sandbox/discovery:
   - continuous: true
   - nightly: true
+    reporter_config:
+      slack:
+        channel: eventing-sources
+        job_states_to_report:
+        - failure
+        report_template: '"The nightly release job for discovery failed, check the log: <{{.Status.URL}}|View logs>"'
   - dot-release: true
   - auto-release: true
   knative-sandbox/eventing-kafka:
